Mobile fix: 1. Remove horizontal scrolling 2. Responsive frontpage lo… (#31)
* Mobile fix: 1. Remove horizontal scrolling 2. Responsive frontpage logo 3. Responsive introduction section 4. Add padding to anchor points of sections 5. Responsive footer

* fix github tasks 1.(overflowingmenu) and 6.(remove documentation from menu)

* smaller tagline text on smaller screens

* fix github task 3.(overflowing and centering issues with logo and tagline text in various screen resolutions)

--- a/Swarm_files/swarm.css
+++ b/Swarm_files/swarm.css
@@ -235,3 +235,87 @@ margin: 40px 0;
 .bott-row-friends {
   padding-bottom: 52px;
 }
+
+/*--------2018_august-october_changes---------------------------------------------------*/
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+#tutorial-start {
+  height: 100vh;
+}
+
+@media (max-width: 1166px) {
+    /* tagline text*/
+  .inner-header h3 {
+    font-size: 150%;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+  .navbar-nav > li > a {
+    padding: 15px 10px;
+  }
+  .inner-header {
+    padding-right: 0;
+    padding-left: 0;
+  }
+  /* Animated logo */
+  #tutorial-start .container .row > .tutorial {
+    float: left;
+    width: 50%;
+  }
+}
+
+@media (max-width: 800px) {
+  .inner-header {
+    padding: 0;
+  }
+  .inner-header .header-title {
+    padding-left: 0;
+  }
+  .inner-header .header-title h3 {
+    padding-left: 20px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 800px) {
+  .inner-header h3 {
+    text-align: left;
+  }
+}
+
+@media (max-width: 767px) {
+  .navbar-fixed-bottom {
+      position: absolute;
+      bottom: -130px;
+  }
+  .row {
+    text-align: center;
+  }
+  /* tagline text*/
+  .inner-header h3 {
+    font-size: 130%;
+  }
+  .swarm-page.main-tutorial {
+    min-height: 900px;
+  }
+  body section {
+    padding-top: 30px;
+  }
+  .main {
+  padding: 0;
+  }
+  .main ul.frontpage-services {
+  display: block;
+  }
+  .linkframe a {
+  display: block;
+  }
+  .linkframe a:nth-child(2) i {
+  width: 17px;
+  }
+  footer a:not(:first-of-type) {
+  margin-left: 0;
+  }
+}
